<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroudAjoutPatient"
    android:orientation="vertical"
    tools:ignore="InefficientWeight" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
      >

        <TableRow
            android:id="@+id/tableRowAjoutPatient"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            tools:ignore="UselessParent" >

            <FrameLayout
                android:id="@+id/frameLayoutLogoAjoutPatient"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/icone_ajouter_rdv" >
            </FrameLayout>

            <TextView
                android:id="@+id/textViewAjoutRDV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="3dp"
                android:text="@string/textViewAjoutRDVTitre"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </TableRow>
       
        
    </TableLayout>

    <TextView
        android:id="@+id/textViewDateRDV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewDateRDV"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDateRDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearborder"
        android:ems="10"
        android:hint="@string/textEditDateRDV"
        android:inputType="date">

        <requestFocus android:layout_width="match_parent" />
    </EditText>

    <TextView
        android:id="@+id/textViewHeureRDV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewHeureRDV"
        android:textStyle="bold" 
        />

    <EditText
        android:id="@+id/editTextHeureRDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearborder"
        android:ems="10"
        android:hint="@string/textEditHeureRDV"
        android:inputType="time" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

  

    
    <TableLayout
        android:layout_width="match_parent"
        android:paddingTop="30dp"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRowBouttonsAjoutFiche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/buttonValiderFormAjoutRDV"
                style="@style/AppBaseTheme"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/buttonValiderFormAjoutRDV" />

            <Button
                android:id="@+id/buttonReinitialiserFormAjoutRDV"
                style="@style/AppBaseTheme"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/buttonReinitialiserFormAjoutRDV"/>
        </TableRow>
    </TableLayout>
    
            <TextView
                android:id="@+id/textViewStatutAjoutRDV"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textViewStatutAjoutRDV"
                android:textColor="@color/statutAjoutPatientColorRed" />

</LinearLayout>
