<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/info_patient_border"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewNomPrenomDM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewNomPrenomDM"
        android:background="@drawable/linearborder_liste_patients"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:orientation="vertical" >
        
      <EditText
        android:id="@+id/editTextIntituleAjoutDM"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:ems="10"
        android:hint="@string/editTextIntituleAjoutDM"
        android:inputType="textPostalAddress"
        android:paddingTop="50dp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <TableRow
            android:id="@+id/tableRowBouttonsAjouterDM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            >

            <Button
                android:id="@+id/buttonAjouterDM"
                style="@style/AppBaseTheme"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/buttonAjouterDM" />

            <Button
                android:id="@+id/buttonEffacerDM"
                style="@style/AppBaseTheme"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/buttonEffacerDM" />

        </TableRow>
    </TableLayout>

</LinearLayout>
